--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,3 +1,8 @@
+# Headers
+webrick:
+  headers:
+    Content-Security-Policy: default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';
+
 #-------------------------------
 # General Site Settings
 
