--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 # Build settings
 
+webrick:
+  headers:
+    Content-Security-Policy: script-src 'self' http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js; 
+
 markdown: kramdown
 permalink: pretty
 
