--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,14 +22,14 @@ menu:
 # NOTE: The avatar is defined in the all.sass document.
 
 blurb: >
-  **I am a Full Stack Software Engineer** with high proficiencies in **Python** and **Javascript**. I also garner a genuine curiosity for research in [Deep Learning](https://github.com/crikeli/Weekly-Neural-Nets/blob/master/NeuralNetBasics.ipynb){:target="_blank"} and [Natural Language Processing](https://github.com/crikeli/natural-language-processing_basics){:target="_blank"}. I always welcome opportunities to learn more about emerging technologies and come up with novel applications that have a positive impact on our lives as a modern society.
+  **I am a Full Stack Software Engineer** with high proficiencies in **Python** and **Javascript**. I also garner a genuine curiosity for research in [Deep Learning](https://github.com/crikeli/Weekly-Neural-Nets/blob/master/NeuralNetBasics.ipynb){:target="_blank"} and [Natural Language Processing](https://github.com/crikeli/python_nlp){:target="_blank"}. I always welcome opportunities to learn more about emerging technologies and come up with novel applications that have a positive impact on our lives as a modern society.
 
 
-  I can on most days be found **coding**, **attending a concert**, **discovering new music**, watching **Futurama**, Drinking some fine **whiskey**, exploring gorgeous **Seattle**, indulging in some friendly **soccer** and generally trying to navigate through this thing we call ***life…***
+  You can on most occasions catch me either **coding**, **discovering new music**, watching **Futurama**, Drinking some fine **whiskey**, exploring gorgeous **Seattle** or indulging in some friendly **soccer**. Generally, I'm just trying to navigate through this thing we call ***life…***
 
 skills:
 - {name: Python, value: '8'}
-- {name: JavaScript, value: '8.5'}
+- {name: JavaScript, value: '8'}
 - {name: Node.JS, value: '8'}
 - {name: HTML + CSS, value: '9'}
 - {name: Data Science, value: '8'}
@@ -44,7 +44,7 @@ projects:
 - {name: Zest JS, folder: 'proj-1', file: 'work/proj-1.html'}
 - {name: Twitter Sentiment Analyser, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Zest iOS, folder: 'proj-3', file: 'work/proj-3.html'}
-- {name: Amazon-Alexa Flight Search App, folder: 'proj-4', file: 'work/proj-4.html'}
+- {name: Deep Learning for Urban Aerial Views, folder: 'proj-4', file: 'work/proj-4.html'}
 
 # Contact Section
 
