A few more layout changes in the projects section

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,8 +1,3 @@
-# Headers
-webrick:
-  headers:
-    Content-Security-Policy: default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';
-
 #-------------------------------
 # General Site Settings
 
@@ -22,7 +17,7 @@ menu:
 # NOTE: The avatar is defined in the all.sass document.
 
 blurb: >
-  **I am a Full Stack Software Engineer** with high proficiencies in **Python** and **Javascript**. I also garner a genuine curiosity for research in [Deep Learning](https://github.com/crikeli/Weekly-Neural-Nets/blob/master/NeuralNetBasics.ipynb){:target="_blank"} and [Natural Language Processing](https://github.com/crikeli/python_nlp){:target="_blank"}. I always welcome opportunities to learn more about emerging technologies and come up with novel applications that have a positive impact on our lives as a modern society.
+  **I am a Full Stack Software Engineer** with high proficiencies in **Python** and **Javascript**. I also garner a genuine curiosity for research in [Deep Learning](https://github.com/crikeli/Weekly-Neural-Nets/){:target="_blank"} and [Natural Language Processing](https://github.com/crikeli/python_nlp){:target="_blank"}. I always welcome opportunities to learn more about emerging technologies and come up with novel applications that have a positive impact on our lives as a modern society.
 
 
   You can on most occasions catch me either **coding**, **discovering new music**, watching **Futurama**, Drinking some fine **whiskey**, exploring gorgeous **Seattle** or indulging in some friendly **soccer**. Generally, I'm just trying to navigate through this thing we call ***life…***
