silly silly grammar

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,10 +17,10 @@ menu:
 # NOTE: The avatar is defined in the all.sass document.
 
 blurb: >
-  **I am a Full Stack Software Engineer** with high proficiencies in **Python** and **Javascript**. I also garner a genuine curiosity for research in [Deep Learning](https://github.com/crikeli/Weekly-Neural-Nets/){:target="_blank"} and [Natural Language Processing](https://github.com/crikeli/python_nlp/tree/master/mini_projects){:target="_blank"}. I always welcome opportunities to learn more about emerging technologies and contemplate novel applications that have a positive impact on our lives as a modern society.
+  **I am a Full Stack Software Engineer** with high proficiencies in **Python** and **Javascript**. I also garner a genuine curiosity for research in [Deep Learning](https://github.com/crikeli/Weekly-Neural-Nets/){:target="_blank"} and [Natural Language Processing](https://github.com/crikeli/python_nlp/tree/master/mini_projects){:target="_blank"}. I always welcome opportunities to learn more about emerging technologies and contemplate novel applications that could have a positive impact on our lives as a modern society.
 
 
-  You can on most occasions catch me either **coding**, **discovering new music**, watching **Futurama**, Drinking some fine **whiskey**, exploring gorgeous **Seattle** or indulging in some friendly **soccer**. Generally, I'm just trying to navigate through this thing we call ***life…***
+  Nine out of ten times you can catch me either **coding**, **discovering new music**, watching **Futurama**, drinking some fine **whiskey**, exploring gorgeous **Seattle** or indulging in some friendly **soccer**. Basically, I'm just trying to navigate through this thing we call ***life…***
 
 skills:
 - {name: Python, value: '8'}
