--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@
 # General Site Settings
 
 title: Kelin Christi
-description: Thinker // Coder // Music Lover
+# description: Thinker // Coder // Music Lover
 email: christik.dev@gmail.com
 
 # NOTE: The Logo and Background image are defined in the all.sass document.
